<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="12dp"
    android:paddingTop="5dp"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <ImageButton
        android:id="@+id/btn_start_playing"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="34dp"
        android:contentDescription="@string/play_icon"
        android:src="@drawable/clave_sol"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="@drawable/round_border" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_of_the_song"
            android:textSize="20sp"
            android:maxLines="1"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/author_placeholder"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="24dp"
            />
    </LinearLayout>

</LinearLayout>
