...
                android:src="@drawable/import_file"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnImport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:backgroundTint="#f8c63d"
                android:text="@string/import_files_btn"
                android:textColor="@color/black"
...
